--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Rento",
   "license": "gpl-3.0",
   "dependencies": {
+    "express": "^4.18.2",
     "node-fetch": "^2.3.0",
     "qs-stringify": "^1.2.1"
   }
